[tool.poetry]
name = "nafftrack"
version = "0.1.0"
description = "A stat tracker client for NAFF"
authors = ["artem30801 <artem30801@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
naff = {extras = ["orjson"], version = "^1.7.1"}
prometheus-client = "^0.14.1"
uvicorn = "^0.18.2"


[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
